# spirograph

./: CMakeLists.txt  README.md  cycloid.cpp  epitrochoid.cpp  main.cpp
